--- a/sqp_report_thai_tax/wizard/sqp_report_thai_tax_wizard.xml
+++ b/sqp_report_thai_tax/wizard/sqp_report_thai_tax_wizard.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <openerp>
     <data>
-        <record id="report_thai_tax_wizard" model="ir.ui.view">
+        <record id="sqp_report_thai_tax_wizard" model="ir.ui.view">
             <field name="name">Tax Report</field>
             <field name="model">report.thai.tax.wizard</field>
             <field name="type">form</field>
@@ -24,19 +24,19 @@
             </field>
         </record>
 
-        <record id="action_report_thai_tax" model="ir.actions.act_window">
-            <field name="name">VAT Report</field>
+        <record id="action_sqp_report_thai_tax" model="ir.actions.act_window">
+            <field name="name">VAT Report (Oct 14)</field>
             <field name="res_model">report.thai.tax.wizard</field>
             <field name="view_type">form</field>
             <field name="view_mode">tree,form</field>
-            <field name="view_id" ref="report_thai_tax_wizard"/>
+            <field name="view_id" ref="sqp_report_thai_tax_wizard"/>
             <field name="target">new</field>
             <field name="help">Print Tax Report</field>
         </record>
 
-        <menuitem action="action_report_thai_tax"
-            id="menu_report_thai_tax"
-            parent="menu_finance_thai_reporting" sequence="25" />
+        <menuitem action="action_sqp_report_thai_tax"
+            id="menu_sqp_report_thai_tax"
+            parent="report_thai_tax.menu_finance_thai_reporting" sequence="35" />
 
     </data>
 </openerp>
