--- a/jrxml_reports/custom_reports/sqp_sale_order.jrxml
+++ b/jrxml_reports/custom_reports/sqp_sale_order.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Sales Order" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
-	<property name="ireport.zoom" value="1.6528925619834725"/>
-	<property name="ireport.x" value="128"/>
-	<property name="ireport.y" value="198"/>
+	<property name="ireport.zoom" value="0.7710865788590636"/>
+	<property name="ireport.x" value="0"/>
+	<property name="ireport.y" value="0"/>
 	<property name="OPENERP_RELATIONS" value="[&quot;order_line&quot;]"/>
 	<style name="table" lineSpacing="Single">
 		<box topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
@@ -189,6 +189,9 @@
 	</field>
 	<field name="Currency" class="java.lang.String">
 		<fieldDescription><![CDATA[pricelist_id/currency_id/name]]></fieldDescription>
+	</field>
+	<field name="product_tag_name" class="java.lang.String">
+		<fieldDescription><![CDATA[product_tag_id/name]]></fieldDescription>
 	</field>
 	<group name="PO" isStartNewPage="true">
 		<groupExpression><![CDATA[$F{id}]]></groupExpression>
@@ -685,6 +688,13 @@ Effective : 19/02/14]]></text>
 					<font fontName="Monospaced" size="9" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false" pdfFontName="Garuda-Bold.ttf" pdfEncoding="Identity-H" isPdfEmbedded="false"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{Quatation No.}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="375" y="39" width="181" height="20" forecolor="#666666"/>
+				<textElement textAlignment="Right">
+					<font size="12" isBold="true"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{product_tag_name}]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageHeader>
